# Autonomous-transport-mobile-robot

./: README.md  requirements.txt
ADS/colcon_ws/: frames_2025-02-15_13.58.15.gv  guide  map.pgm  map.yaml  map2.pgm  map2.yaml
ADS/colcon_ws/install/: setup.zsh
ADS/colcon_ws/log/: latest_build
ADS/gps-driving/: READMD.md  README.md
ADS/gps-driving/custom_interfaces/: package.xml
ADS/gps-driving/gps_imu_publisher/: setup.cfg  setup.py
ADS/gps-driving/gps_navigation/: REAM.md  package.xml  setup.cfg  setup.py
ADS/nav2_gps_waypoint_follower_demo/: README.md
ADS/src/: README.md
BE/Client/: requirements.txt
BE/Client/c103/: vars.py
BE/Websocket/: cert.pem  client.py  jwt_key.pem  key.pem  server.py  server_login.py  server_main.py  server_mod_change.py
BE/c103/: db.sqlite3
FE/ssafy_pjt/: settings.gradle.kts
Following/Jetson/: esp32UARTNode.py
Following/Motor/: following_node.py
Following/ToF/: SerialTest.py
MC/: control_motor_with_joystick.py
RP/: camera_class.py  jetsoncommunication.py  loadhorize.py  logger_config.py  robotpanel.py
RP/HorizonBalance/: MPU6050.py  SG90.py  horize-balancer.py  horizebalancer.py
RP/LoadScale/: scale.py
src/ADS/colcon_ws/install/gps_imu_tf_publisher/share/gps_imu_tf_publisher/: package.bash  package.ps1  package.sh  package.xml  package.zsh
src/ADS/colcon_ws/install/gps_imu_tf_publisher/share/gps_imu_tf_publisher/launch/: tf_publisher.launch.py
src/MC/: control_motor_with_joystick.py
src/RP/: README.md  camera_websocket.py  jetsoncommunication.py  loadhorize.py  robotpanel.py  yolov5.py
(+323 files in other folders)
