<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gps_imu_tf_publisher</name>
  <version>0.0.1</version>
  <description>GPS 및 IMU 데이터를 활용하여 TF 변환을 생성하는 ROS 2 패키지</description>

  <maintainer email="dbswkd76@naver.com">yun</maintainer>
  <license>Apache-2.0</license>

  <!-- 필수 ROS 2 패키지 의존성 -->
  <depend>rclpy</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <!-- 실행에 필요한 추가 Python 라이브러리 -->
  <exec_depend>pyproj</exec_depend>

  <!-- 개발 및 테스트 의존성 -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_pytest</test_depend>
  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
